--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.1",
+    "react-ab-test": "^2.0.1",
     "react-dom": "^16.3.1"
   },
   "devDependencies": {
